--- a/package.json
+++ b/package.json
@@ -8,6 +8,16 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.1.1",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "ethers": "^5.7.0",
+    "hardhat": "^2.10.2",
+    "chai": "^4.3.6",
+    "dotenv": "^10.0.0",
+    "ts-node": "^10.9.1"
+  },
   "dependencies": {
     "@next/font": "13.1.6",
     "@types/node": "18.13.0",
@@ -18,6 +28,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "@openzeppelin/contracts": "^4.7.3"
   }
 }
