--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-toastify": "^9.1.1",
     "typescript": "4.9.4",
     "web3": "1.7.4",
-    "web3-utils": "^1.8.2"
+    "web3-utils": "^1.8.2",
+    "@openzeppelin/contracts": "^4.7.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.49.0",
@@ -46,6 +47,17 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
-    "prettier": "^2.8.3"
+    "prettier": "^2.8.3",
+    "@nomiclabs/hardhat-ethers": "^2.1.1",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@typechain/ethers-v5": "^7.2.0",
+    "@typechain/hardhat": "^2.3.1",
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^9.1.1",
+    "hardhat": "^2.10.2",
+    "typechain": "^5.2.0",
+    "typescript": "4.5.2",
+    "ts-node": "^10.9.1"
   }
 }
