--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "hardhat": "^2.10.2",
     "typechain": "^5.2.0",
     "typescript": "4.5.2",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "dotenv": "^10.0.0"
   }
 }
