--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.6",
     "@next/font": "13.1.5",
+    "@openzeppelin/contracts": "^4.7.3",
     "@types/formidable": "^2.0.5",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
@@ -32,12 +33,19 @@
     "react-toastify": "^9.1.1",
     "typescript": "4.9.4",
     "web3": "1.7.4",
-    "web3-utils": "^1.8.2",
-    "@openzeppelin/contracts": "^4.7.3"
+    "web3-utils": "^1.8.2"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-etherscan": "^3.1.8",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "@typechain/ethers-v5": "^7.2.0",
+    "@typechain/hardhat": "^2.3.1",
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^9.1.1",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
+    "dotenv": "^10.0.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
@@ -45,19 +53,11 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "hardhat": "^2.22.8",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.3",
-    "@nomiclabs/hardhat-ethers": "^2.1.1",
-    "@nomiclabs/hardhat-etherscan": "^3.1.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.3",
-    "@typechain/ethers-v5": "^7.2.0",
-    "@typechain/hardhat": "^2.3.1",
-    "@types/chai": "^4.3.3",
-    "@types/mocha": "^9.1.1",
-    "hardhat": "^2.10.2",
-    "typechain": "^5.2.0",
     "ts-node": "^10.9.1",
-    "dotenv": "^10.0.0"
+    "typechain": "^5.2.0"
   }
 }
